fix: alignment

--- a/src/app/pages/notification/notification.component.scss
+++ b/src/app/pages/notification/notification.component.scss
@@ -1,23 +1,12 @@
-
-  .notification-card {
-  padding: 1rem !important;  // Reduce from 2rem or more
-  margin-bottom: 0.75rem;
-//   border-radius: 8px;
+.notification-card {
+    padding: 1rem !important;
+    margin-bottom: 0.75rem;
 }
 
-  .p-card {
-    box-shadow: none;
-  }
-
-  h3 {
-    font-weight: bold;
-  }
-
-  .text-muted {
-    color: #555;
-    font-size: 0.95rem;
-  }
-
+.notification-title {
+    font-weight: 600;
+    margin-bottom: 0.25rem;
+}
 
 .date-button {
     display: flex;
@@ -25,6 +14,7 @@
     gap: 12px;
     align-items: flex-end;
 }
+
 .notification {
     display: flex;
     flex-direction: row;
